# djnago_boilerplate

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml
app/api/: main.py
app/core/project/: asgi.py  settings.py  wsgi.py
app/project/: settings.py
docker/: Dockerfile  docker-compose.app.yaml  docker-compose.kafka.yaml  docker-compose.storage.yaml
